--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f7f9;
+    background-color: inherit;
     margin: 0;
-    padding: 0;
+    padding: 20px;
+    color: #fff;
 }
 
 .container {
     max-width: 800px;
     margin: 20px auto;
-    background: #fff;
+    /* background: #fff; */
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
