--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
-    background-color: inherit;
+    background-color: #fff;
     margin: 0;
-    padding: 20px;
-    color: #fff;
-}
+    padding: 0px;
+    /* color: #fff; */
+} */
 
 .container {
     max-width: 800px;
     margin: 20px auto;
-    /* background: #fff; */
+    background: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
